Fixup sequence search inside lsaa app

--- a/client/LSAA/js/View/Dialog/SequenceSearch.html
+++ b/client/LSAA/js/View/Dialog/SequenceSearch.html
@@ -11,7 +11,7 @@
             <button type="submit">Search</button>
             <div id="sequence_search_message" style="display: none">No matches found</div>
             <div id="sequence_search_waiting" style="display: none">
-                <img class="waiting_image" src="plugins/WebApollo/img/loading.gif" />
+                <p>Loading...</p>
             </div>
             <div id="sequence_search_header" style="display: none">
                 <span class="search_sequence_matches_header_field search_sequence_matches_generic_field">ID</span>
